# OpenGL-First-Person-Mech-Shooter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
sample1/: CMakeLists.txt  sample1.cpp
sample1/common/: Mesh.cpp  Mesh.hpp  Shader.cpp
src/: CMakeLists.txt  main.cpp  sample1.cpp
src/common/: Camera.cpp  Camera.hpp  Constants.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  Mesh.cpp  Model.cpp  Model.hpp  OmniShadowMap.cpp  PointLight.cpp  PointLight.hpp  Shader.cpp  Shader.hpp  ShadowMap.cpp  ShadowMap.hpp  Skybox.cpp  SpotLight.cpp  SpotLight.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp  Window.hpp
src/models/: Kaiser.mtl
src/shaders/: directional_shadow_map_vertex.glsl  fragment.glsl  fs.glsl  omni_dir_shadow_map_fragment.glsl  omni_dir_shadow_map_geometry.glsl  omni_dir_shadow_map_vertex.glsl  omni_directional_shadow_map_geometry.glsl  omni_directional_shadow_map_vertex.glsl  vertex.glsl  vs.glsl
